feat: Update create token to using fcm token