@@ -1,10 +1,8 @@
 package com.cocotalk.auth.config;
 
+import com.cocotalk.auth.dto.common.ClientType;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
-import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurationSupport;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
@@ -15,16 +13,16 @@ import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
+import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Arrays;
-import java.util.Date;
 import java.util.List;
 
 @Configuration
-@EnableWebMvc
-public class SwaggerConfig extends WebMvcConfigurationSupport {
+@EnableSwagger2
+public class SwaggerConfig {
 
     private ApiInfo apiInfo() {
 
@@ -34,46 +32,36 @@ public class SwaggerConfig extends WebMvcConfigurationSupport {
                 .build();
     }
 
-    private ApiKey accessTokenKey() {
-        return new ApiKey("AccessToken", "x-access-token","header");
-    }
-
-    private ApiKey refreshTokenKey() {
-        return new ApiKey("RefreshToken", "x-refresh-token","header");
+    private ApiKey apiKey() {
+        return new ApiKey("AccessToken", "X-ACCESS-TOKEN","header");
     }
 
     private SecurityContext securityContext() {
-        return SecurityContext.builder().securityReferences(defaultAuth()).build();
+        return SecurityContext
+                .builder()
+                .securityReferences(defaultAuth()).build();
     }
 
     private List<SecurityReference> defaultAuth() {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("RefreshToken", authorizationScopes));
+        return Arrays.asList(new SecurityReference("AccessToken", authorizationScopes));
     }
 
     @Bean
-    public Docket restApi() {
+    public Docket commonApi() {
         return new Docket(DocumentationType.SWAGGER_2)
-                .directModelSubstitute(Date.class, String.class)
+                .ignoredParameterTypes(ClientType.class) // ArgumentResolver
                 .directModelSubstitute(LocalDate.class, String.class)
                 .directModelSubstitute(LocalTime.class, String.class)
                 .apiInfo(this.apiInfo())
                 .select()
-                .apis(RequestHandlerSelectors.basePackage("com.cocotalk.auth.controller"))
-                .paths(PathSelectors.ant("/api/auth/**"))
+                .apis(RequestHandlerSelectors
+                        .basePackage("com.cocotalk.auth.controller"))
+                .paths(PathSelectors.ant("/api/**"))
                 .build()
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(accessTokenKey(), refreshTokenKey()));
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(apiKey()));
     }
-
-    public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        registry.addResourceHandler("swagger-ui.html")
-                .addResourceLocations("classpath:/META-INF/resources/");
-        registry.addResourceHandler("/webjars/**")
-                .addResourceLocations("classpath:/META-INF/resources/webjars/");
-    }
-
 }
-
